kubernetes/svc-kartenkarte.yaml
apiVersion: v1
kind: Service
metadata:
  name: kartenkarte
spec:
  selector:
    app: kartenkarte
  ports:
  - port: 80
    targetPort: 80
