kubernetes/svc-overpass-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: overpass-api
spec:
  selector:
    app: overpass-api
  ports:
  - port: 80
    targetPort: 80
