kubernetes/ing-kartenkarte.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kartenkarte-wild
  labels:
    name: kartenkarte
spec:
  rules:
  - host: "*.kartenkarte.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kartenkarte
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kartenkarte
  labels:
    name: kartenkarte
spec:
  rules:
  - host: kartenkarte.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kartenkarte
            port: 
              number: 80
