kubernetes/ing-overpass-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overpass-api
  labels:
    name: overpass-api
spec:
  rules:
  - host: "*.kartenkarte.org"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: overpass-api
            port: 
              number: 80
